[package]
name = "cock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clickhouse-postgres-client = { version = "0.2.0", features = ["runtime-tokio-rustls"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
